<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cabalry</string>

    <string name="title_activity_map">Map</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_recordings">Recordings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_billing">Billing</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_alarm">Alarm</string>
    <string name="title_activity_alarm_notification">Notification</string>
    <string name="title_activity_alarm_cancel">Cancel</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_forgot">Forgot</string>
    <string name="title_activity_user_info">User Info</string>
    <string name="webview_loading">Loading...</string>


    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_register"><u>Register</u></string>
    <string name="login_forgot"><u>Forgot Username/Password</u></string>

    <string name="mMap">Map</string>
    <string name="mHome">Home</string>
    <string name="mSettings">Settings</string>
    <string name="mProfile">Profile</string>
    <string name="mLogout">Logout</string>
    <string name="mFocus">Focus</string>
    <string name="mNearby">Nearby</string>
    <string name="alarm">Activate Alarm</string>
    <string name="timer">Timer</string>
    <string name="google_maps_key">AIzaSyAS-e4Kk_DLUqyq0Py_6PhRudbuuS5doqA</string>

    <string-array name="menu_array">
        <item>Profile</item>
        <item>Map</item>
        <item>Recordings</item>
        <item>Billing</item>
        <item>Settings</item>
        <item>Help</item>
        <item>Log Out</item>
    </string-array>

    <string-array name="menu_icons">
        <item>@drawable/profile_icon</item>
        <item>@drawable/map_icon</item>
        <item>@drawable/recordings_icon</item>
        <item>@drawable/billing_icon</item>
        <item>@drawable/settings_icon</item>
        <item>@drawable/help_icon</item>
        <item>@drawable/logout_icon</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>