<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.app.LoggedIn" >

      <item android:id="@+id/mMap"
            android:title="@string/mMap"
            android:orderInCategory="100"
            app:showAsAction="never"/>

      <item android:id="@+id/mSettings"
            android:title="@string/mSettings"
            android:orderInCategory="100"
            app:showAsAction="never" />

      <item android:id="@+id/mProfile"
            android:title="@string/mProfile"
            android:orderInCategory="100"
            app:showAsAction="never"/>

      <item android:id="@+id/mLogout"
            android:title="@string/mLogout"
            android:orderInCategory="100"
            app:showAsAction="never"/>
</menu>
