<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_username"
            android:id="@+id/user_text"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_textfield" android:layout_gravity="center_horizontal"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            android:id="@+id/pass_text"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pass_textfield" android:layout_gravity="center_horizontal" android:inputType="textPassword"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_login"
            android:id="@+id/login"/>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_register"
            android:id="@+id/register"/>
</LinearLayout>